# relational-algebra

./: mismatch_output.csv  output_name.csv  output_name2.csv  predicate_error.csv  relational-algebra.cabal
data/: contains_type_mismatch.csv  expected_customer_products.csv  expected_mismatch_output.sh  expected_output_join.csv  expected_output_union_join.csv  order_products.csv  other_orders_table.csv  products.csv
src/: Select.hs  Table.hs  Type.hs  TypedExpression.hs
src/Select/: Expression.hs  Relation.hs  TypedExp.hs  TypedRel.hs
test/: Spec.hs
