name:                relational-algebra
version:             0.1.1.0
license:             AllRightsReserved
author:              LeapYear Technologies
maintainer:          chris@leapyear.io
copyright:           2016 LeapYear Technologies
category:            SQL
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Select
                       Select.Relation
                       Select.Expression
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , csv
                     , mtl
                     , pipes
                     , split
  default-language:    Haskell2010

test-suite relational-algebra-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , relational-algebra
  ghc-options:         -threaded -rtsopts
  default-language:    Haskell2010
